[package]
name = "unwind"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
libc = "0.2.119"
smallvec = "1.8.0"
byteorder = "1.3.4"
thiserror = "1.0.30"
lazy_static = "1.4.0"

[dev-dependencies]
nix = "0.23.1"
rand = "0.8.5"
leb128 = "0.2.5"
backtrace = "0.3.64"

[build-dependencies]
cc = "1.0.73"
