[package]
name = "unwind"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
libc = "0.2"
smallvec = "1.8"
byteorder = "1.3"
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
nix = "0.23"
rand = "0.8"
leb128 = "0.2"
backtrace = "0.3"

[build-dependencies]
cc = "1.0"

[features]
all = ["mem-protect", "dwarf-expression", "trace-shared-libs"]
default = ["mem-protect"]
mem-protect = []
dwarf-expression = []
trace-shared-libs = []
